# ai_plant_engine

./: .gitignore  README.md  pyproject.toml  run.sh  scripts.py  test_openai.py
composer/: USAGE.md  apps.py  engine.py  engine_gemini.py  engine_stability.py
composer/management/commands/: run_composer.py
dummy_project/: asgi.py  settings.py  urls.py  wsgi.py
harvester/: apps.py  engine.py
harvester/management/commands/: run_harvester.py
plant_scheduler/: USAGE.md  apps.py  engine.py
plant_scheduler/management/commands/: run_scheduler.py
tests/: test_compose_garden.py  test_harvest.py
